<resources>
    <string name="zomato_key" templateMergeStrategy="preserve" translatable="false">334b601b63273542fffd0031fe6e9968</string>
    <string name="zomato_api"><![CDATA[https://developers.zomato.com/api/v2.1/search?lat=-33.92127&lon=18.4180213&count=50]]></string>
    <string name="facebook_application_id" translatable="false">332442477330790</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb332442477330790</string>
    <string name="app_name">Break App</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_profile">Profile</string>
    <string name="close_session">Close Session</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="tutorial_title_1">Find the Place</string>
    <string name="tutorial_title_2">Sit and Scan</string>
    <string name="tutorial_title_3">Command and Pay</string>
    <string name="tutorial_title_4">Enjoy and Review</string>
    <string name="tutorial_desc_1">Look in the map for nearby places where you can have a Break</string>
    <string name="tutorial_desc_2">You need to scan the table code in order to make a command, unless you\'re usual customer</string>
    <string name="tutorial_desc_3">Make your commands easily and pay for it, No queues or waiting!</string>
    <string name="tutorial_desc_4">Enjoy your break, Don\'t forget to make a review if the place suits you!</string>
    <string name="tutorial_button_end">Get Started</string>
    <string name="tutorial_button">Next</string>
    <string name="Login_welcome">Wellcome, </string>
    <string name="login_verify">You must verify your user</string>
    <string name="login_error_cancelled">Cancelled</string>
    <string name="login_error_internet">No internet connection</string>
    <string name="login_error_unknown">Unknown error</string>
    <string name="profile_title">Profile</string>
    <string name="fui_default_toolbar_title">Authentication type</string>
    <string name="fui_sign_in_with_email">Login with Email</string>
    <string name="fui_progress_dialog_signing_up">Creating account...</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_payment">Payment</string>
    <string name="profile_places">Places</string>
    <string name="profile_friends">Friends</string>
    <string name="profile_bills">Bills</string>
    <string name="profile_reviews">Reviews</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_save">Save</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Contact Number</string>
    <string name="profile_birthdate">Birth Date</string>
    <string name="profile_spam">Receive News</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="myplaces_empty">You have no places</string>
    <string name="myplaces_empty2">Go to the map and find one</string>
    <string name="myplaces_title">My Places</string>
    <string name="myfriends_message">You have no friends</string>
    <string name="mybills_empty">You have no bills</string>
    <string name="mypayment_title">Payment methods</string>
    <string name="mybills_title">My Bills</string>
    <string name="myfriends_title">My Friends</string>
    <string name="mypayment_empty">You have no Cards</string>
    <string name="mypayment_emtymessage">Add your first Payment Card touchng the + button</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>
    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
</resources>